Add content toplayer cards

--- a/index.html
+++ b/index.html
@@ -38,19 +38,43 @@
       </div>
       <article class="player-stats">
         <h4 class="player-stat-header">TOP SCORER</h4>
-
+        <img src="images/dwight_gayle.jpg" alt="Dwight Gayle Picture">
+        <div class="player-content">
+          <h2 class="stat">17</h2>
+          <p>Goals scored</p>
+          <p>Shots 61</p>
+        </div>
+        <h3 class="player-name">Dwight Gayle</h3>
       </article>
       <article class="player-stats">
-        <h4 class="player-stat-header">TOP SAVES</h4>
-
+        <h4 class="player-stat-header">MOST MINUTES</h4>
+        <img src="images/jamaal_lascelles.jpg" alt="Jamaal Lascelles Picture">
+        <div class="player-content">
+          <h2 class="stat">1784</h2>
+          <p>Minutes played</p>
+          <p>Games 21</p>
+        </div>
+        <h3 class="player-name">Jamaal Lascelles</h3>
       </article>
       <article class="player-stats">
-        <h4 class="player-stat-header">MOST COMPLETE PASSES</h4>
-
+        <h4 class="player-stat-header">MOST ASSISTS</h4>
+        <img src="images/jonjo_shelvey.jpg" alt="Jonjo Shelvey Picture">
+        <div class="player-content">
+          <h2 class="stat">6</h2>
+          <p>Assists made</p>
+          <p>Total Passes 1193</p>
+        </div>
+        <h3 class="player-name">Jonjo Shelvey</h3>
       </article>
       <article class="player-stats">
-        <h4 class="player-stat-header">BEST ATTACKING</h4>
-
+        <h4 class="player-stat-header">MOST FOULS</h4>
+        <img src="images/mo_diame.jpg" alt="Mo Diame Picture">
+        <div class="player-content">
+          <h2 class="stat">2.6</h2>
+          <p>Fouls per game</p>
+          <p>Games 16</p>
+        </div>
+        <h3 class="player-name">Mo Diame</h3>
       </article>
     </section>
   </body>
