--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="player-content">
           <h2 class="stat">17</h2>
           <p>Goals scored</p>
-          <p>Shots 61</p>
+          <p class="season-totals">Shots 61</p>
         </div>
         <h3 class="player-name">Dwight Gayle</h3>
       </article>
@@ -52,7 +52,7 @@
         <div class="player-content">
           <h2 class="stat">1784</h2>
           <p>Minutes played</p>
-          <p>Games 21</p>
+          <p class="season-totals">Games 21</p>
         </div>
         <h3 class="player-name">Jamaal Lascelles</h3>
       </article>
@@ -62,7 +62,7 @@
         <div class="player-content">
           <h2 class="stat">6</h2>
           <p>Assists made</p>
-          <p>Total Passes 1193</p>
+          <p class="season-totals">Total Passes 1193</p>
         </div>
         <h3 class="player-name">Jonjo Shelvey</h3>
       </article>
@@ -72,7 +72,7 @@
         <div class="player-content">
           <h2 class="stat">2.6</h2>
           <p>Fouls per game</p>
-          <p>Games 16</p>
+          <p class="season-totals">Games 16</p>
         </div>
         <h3 class="player-name">Mo Diame</h3>
       </article>
