Replace US flag with nufc logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h5 class="nav-header">Newcastle United</h5>
         <div class="nav-content-right">
           <img class="bell" src="images/bell.svg" alt="">
-          <img class="usa-flag" src="images/USA_flag.png" alt="">
+          <img class="nufc-logo" src="images/newcastle_united_logo.png" alt="">
         </div>
       </nav>
     </header>
@@ -35,7 +35,8 @@
     <section class="main-content">
       <h3 class="main-content-header">Statistics</h3>
       <div class="sponsor-advert">
-        SPONSOR
+        <p>Presented by</p>
+        <!-- <img src="images/puma.png" alt="Puma Sponsor"> -->
       </div>
       <div class="stat-content">
         <article class="player-stats">
