Change puma sponsor to Newcy Brown Ale

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section class="main-content">
       <h3 class="main-content-header">Statistics</h3>
       <div class="sponsor-advert">
-        <p>Presented by</p>
-        <!-- <img src="images/puma.png" alt="Puma Sponsor"> -->
+        <p>Presented by <span class="sponsor-text">Newcastle Brown Ale</span></p>
+        <img src="images/newcastle_brown_ale.png" alt="Newcastle Brown Ale Sponsor">
       </div>
       <div class="stat-content">
         <article class="player-stats">
