Add fixutres section

--- a/index.html
+++ b/index.html
@@ -81,5 +81,29 @@
         </article>
       </div>
     </section>
+    <section class="fixtures">
+      <h2 class="matches">Matches</h2>
+      <div class="dates">
+        <h2 class="fixture-day">Saturday</h2>
+        <div class="fixture-date">
+          <p>Jun</p>
+          <h3>28</h3>
+        </div>
+      </div>
+      <div class="dates">
+        <h2 class="fixture-day">Sunday</h2>
+        <div class="fixture-date">
+          <p>Jun</p>
+          <h3>29</h3>
+        </div>
+      </div>
+      <div class="dates">
+        <h2 class="fixture-day">Monday</h2>
+        <div class="fixture-date">
+          <p>Jun</p>
+          <h3>30</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
