Remove google font weight & add lines img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
     <title>Static Comp Challenge 1</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
@@ -82,6 +82,7 @@
       </div>
     </section>
     <section class="fixtures">
+      <img class="lines" src="images/lines.svg" alt="">
       <h2 class="matches">Matches</h2>
       <div class="dates">
         <h2 class="fixture-day">Saturday</h2>
