Alter text to uppercase & app fixture wrapper

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Goals scored</p>
             <p class="season-totals">Shots 61</p>
           </div>
-          <h3 class="player-name">Dwight Gayle</h3>
+          <h3 class="player-name">Dwight GAYLE</h3>
         </article>
         <article class="player-stats">
           <h4 class="player-stat-header">MOST MINUTES</h4>
@@ -57,7 +57,7 @@
             <p>Minutes played</p>
             <p class="season-totals">Games 21</p>
           </div>
-          <h3 class="player-name">Jamaal Lascelles</h3>
+          <h3 class="player-name">Jamaal LASCELLES</h3>
         </article>
         <article class="player-stats">
           <h4 class="player-stat-header">MOST ASSISTS</h4>
@@ -67,7 +67,7 @@
             <p>Assists made</p>
             <p class="season-totals">Total Passes 1193</p>
           </div>
-          <h3 class="player-name">Jonjo Shelvey</h3>
+          <h3 class="player-name">Jonjo SHELVEY</h3>
         </article>
         <article class="player-stats">
           <h4 class="player-stat-header">MOST FOULS</h4>
@@ -77,32 +77,34 @@
             <p>Fouls per game</p>
             <p class="season-totals">Games 16</p>
           </div>
-          <h3 class="player-name">Mo Diame</h3>
+          <h3 class="player-name">Mo DIAME</h3>
         </article>
       </div>
     </section>
     <section class="fixtures">
       <img class="lines" src="images/lines.svg" alt="">
       <h2 class="matches">Matches</h2>
-      <div class="dates">
-        <h2 class="fixture-day">Saturday</h2>
-        <div class="fixture-date">
-          <p>Jun</p>
-          <h3>28</h3>
+      <div class="dates-wrapper">
+        <div class="dates">
+          <h2 class="fixture-day">Monday</h2>
+          <div class="fixture-date">
+            <p>Dec</p>
+            <h3>26</h3>
+          </div>
         </div>
-      </div>
-      <div class="dates">
-        <h2 class="fixture-day">Sunday</h2>
-        <div class="fixture-date">
-          <p>Jun</p>
-          <h3>29</h3>
+        <div class="dates">
+          <h2 class="fixture-day">Friday</h2>
+          <div class="fixture-date">
+            <p>Dec</p>
+            <h3>30</h3>
+          </div>
         </div>
-      </div>
-      <div class="dates">
-        <h2 class="fixture-day">Monday</h2>
-        <div class="fixture-date">
-          <p>Jun</p>
-          <h3>30</h3>
+        <div class="dates">
+          <h2 class="fixture-day">Monday</h2>
+          <div class="fixture-date">
+            <p>Jan</p>
+            <h3>02</h3>
+          </div>
         </div>
       </div>
     </section>
