Change font of nav header and replace player images

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
     <title>Static Comp Challenge 1</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
     <header>
       <nav>
         <img class="nav-burger" src="images/navburger.svg" alt="">
-        <h5 class="nav-header">Newcastle United</h5>
+        <h5 class="nav-header">Newcastle United FC</h5>
         <div class="nav-content-right">
           <img class="bell" src="images/bell.svg" alt="">
           <img class="nufc-logo" src="images/newcastle_united_logo.png" alt="">
@@ -41,7 +42,7 @@
       <div class="stat-content">
         <article class="player-stats">
           <h4 class="player-stat-header">TOP SCORER</h4>
-          <img src="images/dwight_gayle.jpg" alt="Dwight Gayle Picture">
+          <img src="images/dwight_gayle_3.png" alt="Dwight Gayle Picture">
           <div class="player-content">
             <h2 class="stat">17</h2>
             <p>Goals scored</p>
@@ -51,7 +52,7 @@
         </article>
         <article class="player-stats">
           <h4 class="player-stat-header">MOST MINUTES</h4>
-          <img src="images/jamaal_lascelles.jpg" alt="Jamaal Lascelles Picture">
+          <img src="images/jamaal_lascelles_3.png" alt="Jamaal Lascelles Picture">
           <div class="player-content">
             <h2 class="stat">1784</h2>
             <p>Minutes played</p>
@@ -71,7 +72,7 @@
         </article>
         <article class="player-stats">
           <h4 class="player-stat-header">MOST FOULS</h4>
-          <img src="images/mo_diame.jpg" alt="Mo Diame Picture">
+          <img src="images/mo_diame_3.png" alt="Mo Diame Picture">
           <div class="player-content">
             <h2 class="stat">2.6</h2>
             <p>Fouls per game</p>
