Add flag images to player cards

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <p>Goals scored</p>
             <p class="season-totals">Shots 61</p>
           </div>
+          <img id="TS-flag" class="flag" src="images/england_flag.GIF" alt="England Flag">
           <h3 class="player-name">Dwight GAYLE</h3>
         </article>
         <article class="player-stats">
@@ -58,6 +59,7 @@
             <p>Minutes played</p>
             <p class="season-totals">Games 21</p>
           </div>
+          <img id="MM-flag" class="flag" src="images/england_flag.GIF" alt="England Flag">
           <h3 class="player-name">Jamaal LASCELLES</h3>
         </article>
         <article class="player-stats">
@@ -68,6 +70,7 @@
             <p>Assists made</p>
             <p class="season-totals">Total Passes 1193</p>
           </div>
+          <img id="MA-flag" class="flag" src="images/england_flag.GIF" alt="England Flag">
           <h3 class="player-name">Jonjo SHELVEY</h3>
         </article>
         <article class="player-stats">
@@ -78,6 +81,7 @@
             <p>Fouls per game</p>
             <p class="season-totals">Games 16</p>
           </div>
+          <img id="MF-flag" class="flag" src="images/senegal_flag.GIF" alt="">
           <h3 class="player-name">Mo DIAME</h3>
         </article>
       </div>
