Add alt details and titles to images

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   <body>
     <header>
       <nav>
-        <img class="nav-burger" src="images/navburger.svg" alt="">
+        <img class="nav-burger" src="images/navburger.svg" alt="Three Horizontal Lines">
         <h5 class="nav-header">Newcastle United FC</h5>
         <div class="nav-content-right">
-          <img class="bell" src="images/bell.svg" alt="">
-          <img class="nufc-logo" src="images/newcastle_united_logo.png" alt="">
+          <img class="bell" src="images/bell.svg" alt="Bell" title="Notifications">
+          <img class="nufc-logo" src="images/newcastle_united_logo.png" alt="Newcastle United Logo">
         </div>
       </nav>
     </header>
     <div class="banner-content">
       <div class="website-link-icons">
-        <img class="banner-images" src="images/league.svg" alt="League Table">
-        <img class="banner-images" src="images/stats.svg" alt="Statistics">
-        <img class="banner-images" src="images/tickets.svg" alt="Tickets">
-        <img class="banner-images" src="images/store.svg" alt="Store">
-        <img class="banner-images" src="images/search.svg" alt="Searcg">
+        <img class="banner-images" src="images/league.svg" alt="League Table" title="League Table">
+        <img class="banner-images" src="images/stats.svg" alt="Statistics" title="Statistics">
+        <img class="banner-images" src="images/tickets.svg" alt="Tickets" title="Tickets">
+        <img class="banner-images" src="images/store.svg" alt="Store" title="Store">
+        <img class="banner-images" src="images/search.svg" alt="Search" title="Search">
       </div>
       <div class="social-media-icons">
-        <img class="banner-images" src="images/twitter.svg" alt="Twitter">
-        <img class="banner-images" src="images/facebook.svg" alt="Facebook">
-        <img class="banner-images" src="images/youtube.svg" alt="youTube">
-        <img class="banner-images" src="images/snapchat.svg" alt="Snapchat">
+        <img class="banner-images" src="images/twitter.svg" alt="Twitter" title="Twitter">
+        <img class="banner-images" src="images/facebook.svg" alt="Facebook" title="Facebook">
+        <img class="banner-images" src="images/youtube.svg" alt="YouTube" title="YouTube">
+        <img class="banner-images" src="images/snapchat.svg" alt="Snapchat" title="Snapchat">
       </div>
     </div>
     <section class="main-content">
@@ -81,13 +81,13 @@
             <p>Fouls per game</p>
             <p class="season-totals">Games 16</p>
           </div>
-          <img id="MF-flag" class="flag" src="images/senegal_flag.GIF" alt="">
+          <img id="MF-flag" class="flag" src="images/senegal_flag.GIF" alt="Senegal Flag">
           <h3 class="player-name">Mo DIAME</h3>
         </article>
       </div>
     </section>
     <section class="fixtures">
-      <img class="lines" src="images/lines.svg" alt="">
+      <img class="lines" src="images/lines.svg" alt="Two Horizontal Lines">
       <h2 class="matches">Matches</h2>
       <div class="dates-wrapper">
         <div class="dates">
